-Initial is done to save a  file structure

--- a/Task.html
+++ b/Task.html
@@ -1,16 +1,18 @@
 <!DOCTYPE  html>
 <head>
+<link rel = "stylesheet" type = "text/css" href = "./style1.css">
+</head>
    
-<body  bgcolor="BlanchedAlmond">
+<body>
     <corner><b>Name </b>: AFZARA THAGSIN.J.S<br></center>
         <corner><b>Register No </b>: 212221040006<br></center>
             <corner><b>Department</b>: Computer Science <br></center>
 
-<center><h3><b><p style="color:purple"> CAREER OBJECTIVE</h3></b></center></p>
+<center><h3><b><p class = "a"> CAREER OBJECTIVE</h3></b></center></p>
 <corner><p>To Build a Career in a growing organization,Where I can gt the oppurtunity to prove my Innovative and Creative Abilities.</p>
 
 
-<center><h3><p style="color:purple">PERSONAL INFORMATION</h3></center>
+<center><h3><p class = "a">PERSONAL INFORMATION</h3></center>
 <center><table border="1" >
 <tr><td>Father's Name <td>Shajahan.J</tr>
 <tr><td>Mother's Name <td>MehathaJunnisa.S</tr>
@@ -26,17 +28,17 @@ Mangalam Road,Andipalayam,Tiruppur-641 687</tr>
 </table></center>
 
 
-<center><h3><p style="color:purple">ACADEMIC QUALIFICATION</h3></center></p>
+<center><h3><p class = "a">ACADEMIC QUALIFICATION</h3></center></p>
 <corner><b>2021-2025 </b> :Pursuing B.E.Computer Science Engineering in Saveetha Engineering College,Chennai.<br>
 <corner><b>2021 </b>           : Completed Higher Secondary Education from Little Flower Convent Matriculation Higher Secondary School,Tiruppur.<br>
 <corner><b>2016 </b>           : Did My SSLC from Little Flower Convent Matriculation Higher Secondary School,Tiruppur.<br>
 
-<center><h3><p style="color:purple">TECHNICAL SKILLS</center></h3><p>
+<center><h3><p class = "a">TECHNICAL SKILLS</center></h3><p>
 <corner><b>Programming Languages </b>:C<br>
 <corner>HTML
 
 
-<center><h3><b><p style="color:purple">SOFT SKILLS</b></center></p>
+<center><h3><b><p class = "a">SOFT SKILLS</b></center></p>
 <corner><b>STRENGTHNESS:</b></center><br>
 </ul type="circle">
 <li>Communication<br>
@@ -46,17 +48,17 @@ Mangalam Road,Andipalayam,Tiruppur-641 687</tr>
 <li>Punctualiy<br>
 </ul>
 
-<center><h3><p style="color:purple">RESEARCH INTEREST</h3></center></p>
+<center><h3><p class = "a">RESEARCH INTEREST</h3></center></p>
 <dl>
 <corner><b><dt>WORKSHOP:</dt></b>
 <dd>-Attended the workshop on "3D PRINTING" AND "3D DIGITAL GAME AND DESIGN".</dd<br>
 <dd>-Attended the workshop on "Laptop Service".</dd><br>
 <br>
 <b><dt>INTERNSHIP:</dt></b>
-<dd>-completed an Internship in CONNECT INFOSYS Company for the period of one month regrding <u>WEB DEVLOPMENT</u>
+<dd>-completed an Internship in CONNECT INFOSYS Company for the period of one month regrding <u>WEB DEVELOPMENT</u>
 </dl>
 
-<center><h3><b><p style="color:purple">REFERENCE DETAILS</b></h3></center>
+<center><h3><b><p class = "a">REFERENCE DETAILS</b></h3></center>
 <corner>1.<b>Mr.NAGAPPAN.G</b><br>
 Department of CSE,<br>
 Saveetha Engineering College,<br>
